# rust-firestore-emulator

./: .envrc  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  TODO.md  build.rs  flake.nix  justfile  result  rust-shell.nix  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: rust.yml
crates/emulator-database/: Cargo.toml
crates/emulator-database/src/: config.rs  database.rs  error.rs  listener.rs  project.rs  utils.rs
crates/emulator-database/src/database/: collection.rs  document.rs  field_path.rs  projection.rs  query.rs  read_consistency.rs  reference.rs  timeouts.rs  transaction.rs
crates/emulator-database/src/database/pipeline/: add_fields.rs  aggregate.rs  collection.rs  distinct.rs  expressions.rs  filter.rs  function.rs  limit.rs  mod.rs  offset.rs  remove_fields.rs  select.rs  sort.rs
crates/emulator-database/src/database/query/: filter.rs  tests.rs
crates/emulator-grpc/: Cargo.toml
crates/emulator-grpc/src/: lib.rs  utils.rs
crates/emulator-http/: Cargo.toml
crates/emulator-http/src/: error.rs  lib.rs  routes.rs
crates/emulator-http/src/routes/: emulator.rs  logging.rs  projects.rs  rest_api.rs
crates/emulator-http/tests/: admin_api.rs
crates/emulator-tracing/: Cargo.toml
crates/emulator-tracing/src/: lib.rs  metadata_filter.rs
crates/emulator-ui/: Cargo.toml
crates/emulator-ui/src/: error.rs  routes.rs
crates/emulator-ui/src/routes/: emulator.rs
crates/fifo-rwlock/: Cargo.toml
crates/fifo-rwlock/src/: lib.rs  owned_read_guard.rs  owned_write_guard.rs  queue.rs  read_guard.rs  tests.rs
crates/firestore-database/: Cargo.toml
crates/firestore-database/src/: config.rs  database.rs  error.rs  lib.rs  listener.rs  project.rs  utils.rs
crates/firestore-database/src/database/: collection.rs  document.rs  event.rs  field_path.rs  listener.rs  projection.rs  query.rs  read_consistency.rs  reference.rs  timeouts.rs  transaction.rs
crates/firestore-database/src/database/query/: filter.rs
crates/googleapis/: Cargo.toml  build.rs
crates/googleapis/src/: bytes_base64.rs  lib.rs  ser.rs  timestamp_ext.rs  timestamp_utils.rs  transaction_options_ext.rs  value_ext.rs
crates/hybrid-axum-tonic/: Cargo.toml  README.md  build.rs
crates/hybrid-axum-tonic/src/: lib.rs  multiplex.rs  nest.rs  rest_grpc.rs
crates/hybrid-axum-tonic/tests/: lib.rs  test.proto
crates/hybrid-axum-tonic/tests/common/: mod.rs  server.rs
crates/hybrid_axum_tonic/: Cargo.toml  README.md
crates/hybrid_axum_tonic/src/: lib.rs  status.rs
src/: database.rs  emulator.rs  lib.rs  main.rs  multiplex.rs  utils.rs
src/database/: collection.rs  document.rs  event.rs  field_path.rs  listener.rs  query.rs  transaction.rs  value.rs
src/database/query/: filter.rs
src/emulator/: database.rs
src/emulator/database/: document.rs  field_path.rs  query.rs  transaction.rs
test-suite/: .envrc  .eslintrc.js  .gitignore  .prettierrc  jest.config.js  package-lock.json  package.json  tsconfig.json
test-suite/tests/: 1-get-set.test.ts  2-basic-query.test.ts  3-basic-transaction.test.ts  3-pessimistic-transaction.test.ts  4-live-docs.test.ts  5-live-queries.test.ts  6-readonly-transaction.test.ts  7-descendants-query.test.ts  8-optimistic-transaction.test.ts  9-pipeline-operators.test.ts
test-suite/tests/utils/: common.ts  concurrent.ts  firestore.ts  index.ts
ui/: index.html  lit-html.js
