[package]
name = "firestore-emulator"
description = "Google Cloud Firestore emulator with focus on stability"
version = { workspace = true }
edition = "2021"
rust-version = "1.82"

[features]
default = ["ui"]

# The console feature enables the use of the tokio console for runtime insight in async behavior.
console = ["emulator-tracing/console"]

# Enable the web interface on the same host:port as the other emulator endpoints
ui = ["emulator-http/ui"]

[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.1.5"

[workspace.dependencies]
async-trait = "0.1.86"
axum = "0.7"
base64 = "0.22.1"
clap = "4.5.28"
color-eyre = "0.6.3"
console-subscriber = "0.4.1"
ctreg = "1.0.3"
futures = "0.3.31"
http = "1.2"
itertools = "0.14.0"
prost = "0.13"
rstest = "0.24.0"
serde = "1.0.217"
serde_json = "1.0.138"
serde_with = "3.12.0"
string_cache = "0.8.8"
thiserror = "2.0.11"
tikv-jemallocator = "0.6.0"
time = "0.3.37"
tokio = "1.43.0"
tokio-stream = "0.1.17"
tonic = "0.12"
tonic-build = "0.12"
tower = "0.5"
tower-http = "0.6"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[workspace.lints.rust]
unsafe_code = "forbid"
explicit_outlives_requirements = "forbid"
let_underscore_drop = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
non_ascii_idents = "forbid"
single_use_lifetimes = "warn"
unit_bindings = "warn"
unreachable_pub = "warn"
unused_crate_dependencies = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
color-eyre = { workspace = true }
emulator-database = { path = "crates/emulator-database" }
emulator-grpc = { path = "crates/emulator-grpc" }
emulator-http = { path = "crates/emulator-http" }
emulator-tracing = { path = "crates/emulator-tracing" }
futures = { workspace = true }
http = { workspace = true }
tikv-jemallocator = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tonic = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true
