[package]
name = "emulator-database"
version = { workspace = true }
edition = "2024"

[dependencies]
fifo-rwlock = { workspace = true }
futures = { workspace = true }
googleapis = { workspace = true }
itertools = { workspace = true }
serde_with = { workspace = true }
string_cache = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tokio-stream = { workspace = true, features = ["sync"] }
tonic = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
googletest = { workspace = true }
rstest = { workspace = true }
tokio-test = { workspace = true }

[lints]
workspace = true
