[package]
name = "emulator-grpc"
edition = "2021"
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
emulator-database = { path = "../emulator-database" }
futures = { workspace = true }
googleapis = { path = "../googleapis" }
itertools = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true, features = ["gzip"] }
tracing = { workspace = true }

[lints]
workspace = true
