[package]
name = "emulator-grpc"
edition = "2024"
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
emulator-database = { workspace = true }
futures = { workspace = true }
googleapis = { workspace = true }
itertools = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true, features = ["gzip"] }
tracing = { workspace = true }

[lints]
workspace = true
