[package]
name = "emulator-http"
version = { workspace = true }
edition = "2021"

[features]
default = []

# Enable the web interface on the same host:port as the other emulator endpoints
ui = []

[dependencies]
axum = { workspace = true }
emulator-database = { path = "../emulator-database" }
emulator-tracing = { path = "../emulator-tracing" }
serde_json = { workspace = true }
tower-http = { workspace = true, features = ["set-header", "trace"] }

[lints]
workspace = true

[dev-dependencies]
googleapis = { path = "../googleapis/" }
googletest = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true }
