[package]
name = "emulator-http"
version = { workspace = true }
edition = "2024"

[features]
default = []

# Enable the web interface on the same host:port as the other emulator endpoints
ui = []

[dependencies]
axum = { workspace = true }
emulator-database = { workspace = true }
emulator-tracing = { workspace = true }
serde_json = { workspace = true }
tower-http = { workspace = true, features = ["set-header", "trace"] }

[lints]
workspace = true

[dev-dependencies]
googletest = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
