[package]
name = "emulator-tracing"
version = { workspace = true }
edition = "2021"

[features]
console = ["dep:console-subscriber"]

[dependencies]
console-subscriber = { workspace = true, optional = true }
thiserror = { workspace = true }
time = { workspace = true }
tracing-subscriber = { workspace = true, features = ["local-time", "env-filter"] }

[lints]
workspace = true
