[package]
name = "emulator-tracing"
version = { workspace = true }
edition = "2021"

[features]
console = ["dep:console-subscriber"]

[dependencies]
console-subscriber = { workspace = true, optional = true }
ctreg = "1.0.2"
itertools = { workspace = true }
once_cell = "1.19.0"
thiserror = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "local-time",
    "env-filter",
] }

[lints]
workspace = true
