[package]
name = "emulator-ui"
version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true, features = ["macros"] }
firestore-database = { workspace = true }
serde_json = "1.0.114"
tower-http = { version = "0.4.4", features = ["full"] }
