[package]
name = "emulator-ui"
version = { workspace = true }
edition = "2021"

[features]
default = []

# Enable the web interface on the same host:port as the other emulator endpoints
ui = []

[dependencies]
axum = { workspace = true, features = ["macros"] }
firestore-database = { workspace = true }
serde_json = "1.0.114"
tower-http = { version = "0.4.4", features = ["full"] }

[lints]
workspace = true
