[package]
name = "firestore-database"
version = { workspace = true }
edition = "2021"

[features]
tracing = []

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
googleapis = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true, features = ["serde_derive"] }
serde_with = { workspace = true }
string_cache = "0.8.7"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tokio-stream = { workspace = true, features = ["sync"] }
tonic = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rstest = "0.18.2"

[lints]
workspace = true
