[package]
name = "firestore-database"
version = { workspace = true }
edition = "2021"

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
googleapis = { path = "../googleapis" }
itertools = { workspace = true }
serde = { workspace = true, features = ["serde_derive"] }
serde_with = { workspace = true }
string_cache = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tokio-stream = { workspace = true, features = ["sync"] }
tonic = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }

[lints]
workspace = true
