[package]
name = "googleapis"
edition = "2021"

[lib]
doctest = false

[dependencies]
time = { workspace = true, features = ["formatting", "macros"] }
prost = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
itertools = "0.12.1"
rstest = "0.18.2"
