[package]
name = "googleapis"
version = { workspace = true }
edition = "2021"

[lib]
doctest = false

[dependencies]
time = { workspace = true, features = ["formatting", "macros"] }
prost = { workspace = true }
serde = { workspace = true, features = ["serde_derive"] }
thiserror = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
itertools = { workspace = true }
rstest = { workspace = true }

# Do not use workspace lints here, because generated code is not that clean.
[lints.rust]
explicit_outlives_requirements = "forbid"
let_underscore_drop = "warn"
missing_debug_implementations = "warn"
non_ascii_idents = "warn"
single_use_lifetimes = "warn"
unit_bindings = "warn"
unsafe_code = "forbid"
unused_crate_dependencies = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"

[lints.clippy]
doc_lazy_continuation = "allow"
large_enum_variant = "allow"
