[package]
name = "hybrid-axum-tonic"
version = { workspace = true }
edition = "2021"

[dependencies]
axum = { workspace = true }
futures = { workspace = true }
hyper = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
prost = { workspace = true }
tokio = { workspace = true }
