[package]
name = "hybrid-axum-tonic"
version = { workspace = true }
edition = "2021"

[dependencies]
axum = { workspace = true }
futures = { workspace = true }
hyper = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
prost = { workspace = true }
tokio = { workspace = true, features = ["macros"] }

# Do not use workspace lints here, because generated code is not that clean.
[lints.rust]
unsafe_code = "forbid"
explicit_outlives_requirements = "forbid"
let_underscore_drop = "warn"
missing_debug_implementations = "warn"
non_ascii_idents = "warn"
single_use_lifetimes = "warn"
unit_bindings = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
