[package]
name = "hybrid-axum-tonic"
version = { workspace = true }
edition = "2021"

[dependencies]
futures = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
pin-project.workspace = true
tower = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
axum.workspace = true
prost = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tonic.workspace = true

# Do not use workspace lints here, because generated code is not that clean.
[lints.rust]
unsafe_code = "forbid"
explicit_outlives_requirements = "warn"
let_underscore_drop = "warn"
missing_debug_implementations = "warn"
non_ascii_idents = "warn"
single_use_lifetimes = "warn"
unit_bindings = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
